--- a/workouts.html
+++ b/workouts.html
@@ -80,7 +80,7 @@
                 Screenshot or summary of body composition trends for the selected week.
               </p>
               <div class="metric-image-frame">
-  <img src="assets/img/Bodypod-week4.jpg" alt="Body Pod Week 4">
+  <img src="assets/img/Bodypod-Week4-1.PNG" alt="Body Pod Week 4">
 </div>
 </article>
       <!-- Welltory card -->
@@ -455,7 +455,483 @@
 </div>
 </article>  
  <!-- Wednesday 12/24/25 – example with one card for today -->
-     
+  <article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Wednesday – 04</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
+
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 4.5 hrs · Score 48</li>
+<li><strong>HRV:</strong> 40 ms · <strong>Resting HR:</strong> 55 bpm</li>
+<li><strong>VO₂ Max:</strong> 45</li>
+<li><strong>Weight:</strong> 177 lb · 12.2% BF · Lean Mass 142.9 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2790 · <strong>KVAS:</strong> 18</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk / Jog</span>
+<span class="session-meta">15 min · 1 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk / Jog</td>
+<td>-</td>
+<td>15 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>15 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Hyrox Sim Full Run</span>
+<span class="session-meta">67.5 min · 5.02 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 4</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>1K Run</td>
+<td>1 × 1</td>
+<td>350 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>5:50 time</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>Push ups</td>
+<td>1 × 20</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 Seconds limit</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>1K Run</td>
+<td>1 × 1</td>
+<td>335 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>5:35 time</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>Lunges </td>
+<td>1 × 20</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Lunges</td>
+<td>60 Seconds limit</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>1K Run</td>
+<td>1 × 1</td>
+<td>310 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>5:10 time</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>Burpee Broad Jump </td>
+<td>1 × 12</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Burpee Broad Jump</td>
+<td>60 Seconds limit</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>1K Run</td>
+<td>1 × 1</td>
+<td>395 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>6:35 time</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>Squats</td>
+<td>1 × 30</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>60 Seconds limit</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>1K Run</td>
+<td>1 × 1</td>
+<td>395 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>6.35 time</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>Push ups</td>
+<td>1 × 20</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 Seconds limit</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>1K Run</td>
+<td>1 × 1</td>
+<td>385 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>6:25 time</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>Lunges </td>
+<td>1 × 20</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Lunges</td>
+<td>60 Seconds limit</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>1K Run</td>
+<td>1 × 1</td>
+<td>457 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>7:37 time</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>Burpee Broad Jump </td>
+<td>1 × 12</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Burpee Broad Jump</td>
+<td>60 Seconds limit</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>1K Run</td>
+<td>1 × 1</td>
+<td>458 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>7:38 time</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+<tr>
+<td>Squats</td>
+<td>1 × 30</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>60 Seconds limit</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>1 × 1</td>
+<td>30 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>30 sec rest</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>5.25 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>28 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>29.25 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk / Jog</span>
+<span class="session-meta">15 min · 1 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk / Jog</td>
+<td>-</td>
+<td>15 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>15 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>   
  <!-- Thursday 12/25/25 – example with one card for today -->
       
  <!-- Friday 12/26/25 – example with one card for today -->
