--- a/workouts.html
+++ b/workouts.html
@@ -1413,7 +1413,415 @@
 </div>
 </article>    
  <!-- Saturday 12/27/25 – example with one card for today -->
-     
+  <article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Saturday – 04</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
+
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8.25 hrs · Score 79</li>
+<li><strong>HRV:</strong> 58 ms · <strong>Resting HR:</strong> 47 bpm</li>
+<li><strong>VO₂ Max:</strong> 44</li>
+<li><strong>Weight:</strong> 179.2 lb · 11.9% BF · Lean Mass 143.2 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2375 · <strong>KVAS:</strong> 15</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk / Jog</span>
+<span class="session-meta">30 min · 2.25 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk / Jog</td>
+<td>-</td>
+<td>30 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>30 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Hyrox Controlled Zone</span>
+<span class="session-meta">61.25 min · 0.31 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>SkiERG warm up</td>
+<td>1 × 1 @ 4 damper</td>
+<td>180 sec</td>
+<td>Both</td>
+<td>SkiERG</td>
+<td>500 meter 2:12 - 2:26</td>
+</tr>
+<tr>
+<td>Rest Warm up</td>
+<td>1 × 1</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>120 sec rest</td>
+</tr>
+<tr>
+<td>Rower</td>
+<td>3 × 1 @ 4 damper</td>
+<td>132 sec</td>
+<td>Both</td>
+<td>Rower</td>
+<td>500 meter</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 sec rest</td>
+</tr>
+<tr>
+<td>Farmers Carry</td>
+<td>3 × 1 @ 40 lb</td>
+<td>120 sec</td>
+<td>Both</td>
+<td>Farmers Carry</td>
+<td>2 minutes 40 lbs kettle bell both hands</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 sec rest</td>
+</tr>
+<tr>
+<td>Walking Lunges</td>
+<td>3 × 20 @ 30 lb</td>
+<td>120 sec</td>
+<td>Alternating</td>
+<td>Lunges</td>
+<td>20 Each leg</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 sec rest</td>
+</tr>
+<tr>
+<td>SkiERG</td>
+<td>3 × 1 @ 4 damper</td>
+<td>132 sec</td>
+<td>Both</td>
+<td>SkiERG</td>
+<td>500 meter</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 sec rest</td>
+</tr>
+<tr>
+<td>Burpee Broad Jumps</td>
+<td>3 × 12</td>
+<td>132 sec</td>
+<td>Both</td>
+<td>Burpee Broad Jump</td>
+<td>12 in 60 seconds</td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 sec rest</td>
+</tr>
+<tr>
+<td>Wall Balls</td>
+<td>3 × 15 @ 10 lb</td>
+<td>132 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>15 each then stop even if more could be done. </td>
+</tr>
+<tr>
+<td>Rest</td>
+<td>3 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 sec rest</td>
+</tr>
+<tr>
+<td>Run</td>
+<td>1 × 1</td>
+<td>194 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>1/2 1K in 3:14 zone 3 to zone 2</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0.5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>2.25 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>45.5 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>13 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0.25 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Stretch cool down</span>
+<span class="session-meta">5 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Stretch cool down</td>
+<td>-</td>
+<td>5 min</td>
+<td>-</td>
+<td>Stretch after circuit</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Recovery Raising HRV</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>   
  <!-- Sunday 12/28/25 – example with one card for today -->
      
 </div>
