--- a/workouts.html
+++ b/workouts.html
@@ -1407,7 +1407,275 @@
 </div>
 </article>
 <!-- Thursday 1/8/26 – example with one card for today -->
- 
+ <article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Thursday – 06</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
+
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8.25 hrs · Score 90</li>
+<li><strong>HRV:</strong> 85 ms · <strong>Resting HR:</strong> 45 bpm</li>
+<li><strong>VO₂ Max:</strong> 45.4</li>
+<li><strong>Weight:</strong> 177.6 lb · 12.4% BF · Lean Mass 141.8 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2359 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Hyrox Techinque </span>
+<span class="session-meta">60 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Kettle bell swings</td>
+<td>4 × 12 @ 35 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>4 sets with 60 second rest in between</td>
+</tr>
+<tr>
+<td>Bent over alternating Dumbell Row</td>
+<td>4 × 12 @ 25 lb</td>
+<td>240 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>4 sets with 60 second rest in between</td>
+</tr>
+<tr>
+<td>Standing Sled Pull</td>
+<td>4 × 1 @ 200 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>12.5 meters 4 sets with 60 seconds rest in between</td>
+</tr>
+<tr>
+<td>Sitting Sled Pull</td>
+<td>4 × 1 @ 210 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>12.5 meters 4 sets with 60 seconds rest in between</td>
+</tr>
+<tr>
+<td>Walking Lunges</td>
+<td>8 × 20 @ 40 lb</td>
+<td>480 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>20 each leg in each set </td>
+</tr>
+<tr>
+<td>Dead Lifts</td>
+<td>4 × 12 @ 135 lb</td>
+<td>240 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>4 sets with 60 second rest in between</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>29.5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>13.25 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>16 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>1.25 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk</span>
+<span class="session-meta">20 min · 1.42 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 2</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Zone 1 Endurance</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>9.75 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>10.25 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>No</td>
+<td>Recovery Raising HRV</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Friday 1/9/26 – example with one card for today -->
  
 <!-- Saturday 1/10/26 – example with one card for today -->
