--- a/workouts.html
+++ b/workouts.html
@@ -125,7 +125,275 @@
     <div class="week-days">
       
 <!-- Monday 1/12/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Monday – 07</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8 hrs · Score 87</li>
+<li><strong>HRV:</strong> 82 ms · <strong>Resting HR:</strong> 46 bpm</li>
+<li><strong>VO₂ Max:</strong> 45.4</li>
+<li><strong>Weight:</strong> 179.3 lb · 12% BF · Lean Mass 142.8 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Strength training</span>
+<span class="session-meta">68.5 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Alternate Sit Overhead press</td>
+<td>3 × 12 @ 10 lb</td>
+<td>180 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>Dumbell 10 lbs each hand</td>
+</tr>
+<tr>
+<td>Dimbells Bench Press</td>
+<td>3 × 12 @ 30 lb</td>
+<td>180 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>Dumbell 30 lbs each hand</td>
+</tr>
+<tr>
+<td>Alternate incline skull crusher</td>
+<td>3 × 12 @ 17.5 lb</td>
+<td>180 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>Dumbell 17.5 lbs each hand</td>
+</tr>
+<tr>
+<td>Alternate incline press</td>
+<td>3 × 12 @ 40 lb</td>
+<td>180 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>Dumbell 40 lbs each hand</td>
+</tr>
+<tr>
+<td>Sitting dumbell tricep extension</td>
+<td>3 × 12 @ 17.5 lb</td>
+<td>180 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Dumbell 17.5 lbs each hand</td>
+</tr>
+<tr>
+<td>Dumbell Bench Press</td>
+<td>1 × 12 @ 40 lb</td>
+<td>180 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>Dumbell 40 lbs each hand</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>37 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>19 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>7.5 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>5 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Outdoor Walk</span>
+<span class="session-meta">60 min · 4 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Outdoor Walk</td>
+<td>-</td>
+<td>60 min</td>
+<td>-</td>
+<td>Zone 1 Endurance</td>
+<td>Raise VO2 Max session</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>45.5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>4.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>No</td>
+<td>Recovery Raising HRV</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Tuesday 1/13/26 – example with one card for today -->
 
 <!-- Wednesday 1/14/26 – example with one card for today -->
